# slidegauge

./: .gitignore  CONTRIBUTING.md  README.md  example.md  pyproject.toml  slidegauge.py
.github/workflows/: test.yml
